# product-genie

./: .gitignore  README.md
GrBackend/: .dockerignore  Dockerfile  Makefile  app.py  config.yaml  custom_ui_integration.md  maps.json  pyproject.toml  requirements.txt
GrBackend/assets/: 100 pompts for ProductGenie MVP.txt  assets.json  prompting_template_v1.txt  prompting_template_v2.txt  prompting_template_v3.txt  prompting_template_v4.txt  prompts_99.json  test_prompt_generation_template.txt  test_prompts.json
GrBackend/blender_script/: install_addon.py  process.py
GrBackend/configs/: llm_config.json  vector_index_config.json
GrBackend/google_sheets_domain/: gsheets.py
GrBackend/llm_service_domain/: gemini.py  llm_service.py  mistralai.py  ollama.py  openai.py
GrBackend/src/: FileHandler.py  apiProcess.py  blender_renderer.py  config.py  file_handler.py  gce.py  gcs.py  schemas.py
GrBackend/tests/manual/: manual_test_3dpresso.py  manual_test_gemini.py  manual_test_gsheets.py  manual_test_meshyai.py  manual_test_ollama.py
GrBackend/tests/unit/: test_gemini.py
GrBackend/utils/: color_utils.py  config.py  config_dict.py  exceptions.py  logger.py
ProductVideo/: .gitignore  LICENSE  README.md  package.py
ProductVideo/productvideo/: __init__.py  patch.py  reload.py
ProductVideo/productvideo/operators/: __init__.py  animations.py  selection.py
ProductVideo/productvideo/panels/: __init__.py
ProductVideo/productvideo/properties/: __init__.py  maps.json
ProductVideo/productvideo/utils/: FileHandler.py  blender.py  (+5 more)
ProductVideo/scripts/: process.py
